--- a/issue-to-markdown.yml
+++ b/issue-to-markdown.yml
@@ -11,9 +11,10 @@ on:
         - uses: actions/checkout@v3
           with:
             token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        - uses: eunjae-lee/issue-to-markdown@v1
+        - uses: ansso8430/issue-to-markdown@v1
           with:
             token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+            dest: 'data/blog'
         - uses: stefanzweifel/git-auto-commit-action@v4
           with:
             commit_message: 'docs: update contents'
