--- a/.github/workflows/issue-to-markdown.yml
+++ b/.github/workflows/issue-to-markdown.yml
@@ -14,6 +14,7 @@ jobs:
       - uses: eunjae-lee/issue-to-markdown@v1
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          dest: 'data/blog'
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: 'docs: update contents'
